😻🏜 Checkpoint ./2_of_amerikaz_most_wanted.html:7333280/615 ./all_about_u.html:7333280/463

--- a/2_of_amerikaz_most_wanted.html
+++ b/2_of_amerikaz_most_wanted.html
@@ -1,8 +1,15 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <title>2 of amerikaz most wanted</title>
+  </head>
   
+  <body>
+    <p>
+  visualizing two of america's most wanted Tupac & Snoop dogg having a ganster party
+</p>
+  </body>
 </html>
 
 
 
-visualizing two of america's most wanted Tupac & Snoop dogg having a ganster party
