--- a/all_about_u.html
+++ b/all_about_u.html
@@ -1,1 +1,14 @@
-i like this song because seeing the same women is common in a young mans eyes
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>all about u</title>
+  </head>
+<body>
+  <p>
+  i like this song because seeing the same women is common in a young mans eyes
+</p>
+  </body>
+
+</html>
+
+
