👹🚞 Checkpoint ./ambitionz_as_a_ridah.html:7333280/267 ./california_love.html:7333280/263 ./got_my_mind_made_up.html:7333280/247 ./heartz_of_men.html:7333280/313 ./how_do_u_want_it.html:7333280/352 ./i_aint_mad_at_cha.html:7333280/389 ./life_goes_on.html:7333280/134 ./no_more_pain.html:7333280/112 ./only_god_can_judge_me.html:7333280/112 ./skandalouz.html:7333280/112 ./tradin_war_stories.html:7333280/112 ./whatz_ya_phone_#.html:7333280/112

--- a/california_love.html
+++ b/california_love.html
@@ -1,1 +1,12 @@
-i like this song because it brings a great edge to a welcome to california 
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>all about u</title>
+  </head>
+<body>
+  <p>
+  i like this song because it brings a great edge to a welcome to california 
+</p>
+  </body>
+
+</html>
