--- a/got_my_mind_made_up.html
+++ b/got_my_mind_made_up.html
@@ -1,1 +1,12 @@
-i like this song because it has a early 80's beatbox type of rythym
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>all about u</title>
+  </head>
+<body>
+  <p>
+  i like this song because it has a early 80's beatbox type of rythym
+</p>
+  </body>
+
+</html>
