--- a/heartz_of_men.html
+++ b/heartz_of_men.html
@@ -1,1 +1,12 @@
-i like this song because tupac makes it obvious what makes an enemy and a friend to different people
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>all about u</title>
+  </head>
+<body>
+  <p>
+  i like this song because tupac makes it obvious what makes an enemy and a friend to different people
+</p>
+  </body>
+
+</html>
