--- a/how_do_u_want_it.html
+++ b/how_do_u_want_it.html
@@ -1,1 +1,12 @@
-i like this song because it a clear question , how do you want it.
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>all about u</title>
+  </head>
+<body>
+  <p>
+  i like this song because of the beat and colab with singers K-Ci and JoJO
+</p>
+  </body>
+
+</html>
