--- a/i_aint_mad_at_cha.html
+++ b/i_aint_mad_at_cha.html
@@ -1,1 +1,12 @@
-i like this song because it reminds me of my long life friends and how we are coming up and the different pathways we decide we wanna take
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>all about u</title>
+  </head>
+<body>
+  <p>
+  i like this song because it reminds me of my long life friends and how we are coming up and the different pathways we decide we wanna take
+</p>
+  </body>
+
+</html>
