--- a/ambitionz_as_a_ridah.html
+++ b/ambitionz_as_a_ridah.html
@@ -1,1 +1,13 @@
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>all about u</title>
+  </head>
+<body>
+  <p>
+  
+</p>
+  </body>
+
+</html>
 Visualizing the rules of a "ridah"
