--- a/ambitionz_as_a_ridah.html
+++ b/ambitionz_as_a_ridah.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>all about u</title>
+    <title>ambitionz as a ridah</title>
   </head>
 <body>
   <p>
-  
+  Visualizing the rules of a "ridah"
 </p>
   </body>
 
 </html>
-Visualizing the rules of a "ridah"
