--- a/life_goes_on.html
+++ b/life_goes_on.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>all about u</title>
+    <title>life goes on</title>
   </head>
 <body>
   <p>
-  
+  i like this song because tupac reflects on the deaths that occur frequently with blacks and how we need to stop
 </p>
   </body>
 
