--- a/no_more_pain.html
+++ b/no_more_pain.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>all about u</title>
+    <title>no more pain</title>
   </head>
 <body>
   <p>
-  
+  i like this song because tupac explains why you have to be mentally storng in the game we call life
 </p>
   </body>
 
