--- a/only_god_can_judge_me.html
+++ b/only_god_can_judge_me.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>all about u</title>
+    <title>only god can judge me</title>
   </head>
 <body>
   <p>
-  
+  i like this song because tupac lets the listeners know only god can judge him regardless of his past decisions and sins
 </p>
   </body>
 
