--- a/skandalouz.html
+++ b/skandalouz.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>all about u</title>
+    <title>skandalous</title>
   </head>
 <body>
   <p>
-  
+  i like this song because tupac does some story telling about a scandalous women who betrayed him by messing around with his friend
 </p>
   </body>
 
