--- a/tradin_war_stories.html
+++ b/tradin_war_stories.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>all about u</title>
+    <title>tradin war stories</title>
   </head>
 <body>
   <p>
-  
+  this song gives a brief 
 </p>
   </body>
 
